--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2009-03-23  Martin Baulig  <martin@ximian.com>
+
+	* classes/DebuggerConfiguration.cs
+	(DebuggerConfiguration.CreateDefaultModuleGroups): Add new module
+	group `user' for user code.
+
+	* classes/DebuggerSession.cs
+	(DebuggerSession.AddUserModule): New public method.
+	(DebuggerSession.CreateModule): If the module's file name matches
+	any of the user modules, use the `user' module group.
+
+	* classes/Module.cs
+	(SymbolFile.CodeBase): New abstract property; this is the absolute
+	path name of the loaded module.
+
 2009-03-20  Martin Baulig  <martin@ximian.com>
 
 	* classes/DebuggerConfiguration.cs
