--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-03-24  Martin Baulig  <martin@ximian.com>
+
+	* classes/Event.cs
+	(Event.IsUserModule): New public property.
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.ActivatePendingBreakpoints): When called during a
+	module-load, only activate user-breakpoints if we're actually a
+	user module.
+
 2009-03-23  Martin Baulig  <martin@ximian.com>
 
 	* classes/DebuggerConfiguration.cs
