--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-27  Martin Baulig  <martin@ximian.com>
+
+	* backend/server/x86-ptrace.c
+	(server_ptrace_kill): Do a `kill (SIGKILL)' in addition to the
+	`ptrace (PTRACE_KILL)'.
+
 2009-03-24  Martin Baulig  <martin@ximian.com>
 
 	* classes/Event.cs
