--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-31  Martin Baulig  <martin@ximian.com>
+
+	* MdbSymbolReader.cs
+	(MdbSymbolReader.ReadSourceFiles): Print the file name in verbose
+	mode.
+
 2009-03-05  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolTable.cs
