--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-04-03  Martin Baulig  <martin@ximian.com>
 
+	* classes/LineNumberTable.cs
+	(LineNumberTable.DumpLineNumbers): Added `TextWriter' argument.
+
+2009-04-03  Martin Baulig  <martin@ximian.com>
+
 	* classes/Utils.cs: New file.
 	(LessPipe): New public class; derives from `TextWriter' and opens
 	a pipe to `less'.
