--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-04-06  Martin Baulig  <martin@ximian.com>
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.ActivatePendingBreakpoint): Don't use Report.Error() to
+	report breakpoint failures; `breakpoint.OnBreakpointError()' is
+	all we need.
+
 2009-04-03  Martin Baulig  <martin@ximian.com>
 
 	* classes/LineNumberTable.cs
