--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-04-06  Martin Baulig  <martin@ximian.com>
 
+	* test/testsuite/NUnit.cs
+	(TestSuite.ctor): Set `config.RedirectOutput' since we're
+	examining it in the tests.
+
+2009-04-06  Martin Baulig  <martin@ximian.com>
+
 	* backend/SingleSteppingEngine.cs
 	(SSE.ActivatePendingBreakpoint): Don't use Report.Error() to
 	report breakpoint failures; `breakpoint.OnBreakpointError()' is
