2009-04-15  Jonathan Chambers  <joncham@gmail.com>
        * classes/DebuggerConfiguration.cs
        (DebuggerConfiguration): Use Environment.SpecialFolder.Personal
        instead of HOME environment variable.
        (LoadConfigurationFromStream): Verify file exists before trying to access it.


svn path=/trunk/debugger/; revision=131777

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-04-15  Jonathan Chambers  <joncham@gmail.com>
 
+	* classes/DebuggerConfiguration.cs
+	(DebuggerConfiguration): Use Environment.SpecialFolder.Personal
+	instead of HOME environment variable.
+	(LoadConfigurationFromStream): Verify file exists before trying to access it.
+
+2009-04-15  Jonathan Chambers  <joncham@gmail.com>
+
 	* frontend/Style.cs: Add braces to work around bug 478101.
 
 	* languages/mono/MonoLanguageBackend.cs: Add braces to work around bug 478101.
