--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,14 @@
 
 	* languages/mono/MonoLanguageBackend.cs: Add braces to work around bug 478101.
 
+2009-04-15  Martin Baulig  <martin@ximian.com>
+
+	* symbolwriter/MonoSymbolTable.cs
+	(LineNumberTable.DW_LNE_MONO__extensions_start): New const.
+	(LineNumberTable.DW_LNE_MONO__extensions_end): New const.
+	(LineNumberTable.DoRead): Ignore unknown extended opcodes if
+	they're within the Mono extension range.
+
 2009-04-14  Martin Baulig  <martin@ximian.com>
 
 	* symbolwriter/ndesk-options.cs: New file; copied
