Check 'ulimit -v' before running the tests and refuse to run when too low. 2009-04-28  Martin Baulig  <martin@ximian.com>
	* build/ulimit-check.c: New helper program to check `ulimit -v';
	we'll add more checks to it later.

	* build/runtests.in: Refuse the run the tests if `ulimit-check' fails.

svn path=/trunk/debugger/; revision=132841

--- a/ChangeLog
+++ b/ChangeLog
@@ -83,6 +83,13 @@
 
 	* build/monodebuggerserver.vcproj: Added.
 
+2009-04-28  Martin Baulig  <martin@ximian.com>
+
+	* build/ulimit-check.c: New helper program to check `ulimit -v';
+	we'll add more checks to it later.
+
+	* build/runtests.in: Refuse the run the tests if `ulimit-check' fails.
+
 2009-04-17  Martin Baulig  <martin@ximian.com>
 
 	* classes/LineNumberTable.cs
