Fix a regression introduced in 19c3c88446cc171486607ffacead7be4595680b1 / svn revision 132009. 2009-04-29  Martin Baulig  <martin@ximian.com>
	* backend/BreakpointHandle.cs (FunctionBreakpointHandle): Fix a
	regression introduced in r132009.

svn path=/trunk/debugger/; revision=133002

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-29  Martin Baulig  <martin@ximian.com>
+
+	* backend/BreakpointHandle.cs (FunctionBreakpointHandle): Fix a
+	regression introduced in r132009.
+
 2009-04-27  Jonathan Chambers  <joncham@gmail.com>
 
 	* build/debugger.sln: Turn on monodebuggerserver project
