--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,69 @@
+2009-01-28  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 124785 ****
+
+	* frontend/ScriptingContext.cs
+	(ScriptingContext.HandleDebuggerDisplay): Make this method static.
+	(ScriptingContext.CheckTypeProxy): New public static method.
+
+2009-01-27  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 124665 ****
+
+	* frontend/ScriptingContext.cs
+	(ScriptingContext.HandleDebuggerDisplay): Improve API: take a
+	`DebuggerDisplayAttribute' parameter and return both the value and
+	the type.
+
+2009-01-26  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 124496 ****
+
+	Add support for the [DebuggerTypeProxy] attribute.
+
+	* languages/TargetStructType.cs
+	(TargetStructType.DebuggerTypeProxyAttribute): New public
+	property.
+
+	* frontend/Expression.cs
+	(TypeProxyExpression): New internal class.  This is used to
+	evaluate a [DebuggerTypeProxy] attribute.
+
+	* classes/ScriptingContext.cs
+	(ScriptingContext.DoFormatObject): Check for [DebuggerTypeProxy].
+
+2009-01-26  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 124488 ****
+
+	Add support for the [DebuggerDisplay] attribute.
+
+	* languages/TargetMember.cs
+	(TargetMemberInfo.DebuggerDisplayAttribute): New public property.
+
+	* languages/TargetStructType.cs
+	(TargetStructType.DebuggerDisplayAttribute): New public property.
+
+	* languages/mono/MonoSymbolFile.cs
+	(MonoSymbolFile.CheckCustomAttributes): New internal method.
+
+	* classes/MethodSource.cs
+	(MethodSource.GetNamespaces): New public abstract method.
+
+	* classes/ExpressionEvaluator.cs
+	(ExpressionEvaluator.EvaluationResult): Added `InvalidExpression'.
+
+	* frontend/ScriptingContext.cs
+	(ScriptingContext.GetNamespaces): Removed the overloaded version
+	with a `StackFrame' argument; only keep the parameterless one.
+	(ScriptingContext.CurrentLanguage): Make this work without a frame.
+	(ScriptingContext.ImplicitInstance): New public property; this can
+	be used in expression contexts to implicitly set the `this'.
+	(ScriptingContext.HandleDebuggerDisplay): New private method.
+	(ScriptingContext.MonoObjectToString): Call
+	HandleDebuggerDisplay() to check for the [DebuggerDisplay]
+	attribute.
+
 2009-01-21  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 124118 ****
@@ -5,8 +71,7 @@
 	Add support for the [DebuggerBrowsable] attribute.
 
 	* languages/TargetMember.cs
-	(TargetFieldInfo.DebuggerBrowsable): New public property.
-	(TargetPropertyInfo.DebuggerBrowsable): Likewise.
+	(TargetMemberInfo.DebuggerBrowsableState): New public property.
 
 2009-01-21  Martin Baulig  <martin@ximian.com>
 
