--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-03-05  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 128878 ****
+
+	* languages/mono/MonoSymbolFile.cs
+	(MonoSymbolFile.GetMethod): Also search in all include files.
+
 2009-03-09  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 128877 ****
