**** Backport of 131141 **** 2009-04-30  Martin Baulig  <martin@ximian.com>
	**** Backport of 131141 ****

	* test/testsuite/NUnit.cs
	(TestSuite.ctor): Set `config.RedirectOutput' since we're
	examining it in the tests.

svn path=/branches/mono-2-4/debugger/; revision=133124

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+**** Backport of 131141 ****
+2009-04-30  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 131141 ****
+
+	* test/testsuite/NUnit.cs
+	(TestSuite.ctor): Set `config.RedirectOutput' since we're
+	examining it in the tests.
+
 2009-04-30  Martin Baulig  <martin@ximian.com>
 
 	Merge status as of April 29th:
@@ -7,6 +16,8 @@
 	- 128557 has been reverted in 128559
 
 	- 129763 and 129857 have not been merged.
+
+	- 131141 has already been merged.
 
 2009-04-30  Martin Baulig  <martin@ximian.com>
 
